# Stuffwaffe

./: CMakeLists.txt  README.md
src/: Bunnyhop.cpp  Bunnyhop.hpp  Client.cpp  Client.hpp  Glow.cpp  Glow.hpp  Logger.cpp  Logger.hpp  Math.hpp  Memory.cpp  Memory.hpp  Noflash.cpp  Noflash.hpp  Offsets.hpp  Player.cpp  Player.hpp  Skinchanger.cpp  Skinchanger.hpp  Stuffwaffe.cpp  Stuffwaffe.hpp  VAC.cpp  VAC.hpp
